redid to grid, fixed overflow problem

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,49 +4,56 @@
 #FFEEF4 */
 
 body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  margin:0;
+  padding:0;
+  font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-color: whitesmoke;
-  overflow-x: hidden;
+  -webkit-font-smoothing:antialiased;
+  -moz-osx-font-smoothing:grayscale;
+  background-color:whitesmoke;
+  overflow-x:hidden;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family:source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
 
-/* ----------HEADER---------- */
+.App{
+  height:100vh;
+  display:grid;
+  grid-template-rows:auto 1fr auto;
+}
+
+/* ---------- HEADER ---------- */
 .header{
   display:flex;
-  justify-content: space-between;
-  padding: 3em 2em 0 2em;
+  justify-content:space-between;
+  padding:3em 2em 0 2em;
+  grid-row:1/2;
 
 }
 
 .header-right{
   display:flex;
   gap:4em;
-  margin-right: 4em; 
+  margin-right:4em; 
 }
 
 .header-right a{
-  text-decoration: none;
+  text-decoration:none;
   color:black;
   font-size:1em;
-  margin-top: 10px;
+  margin-top:10px;
 }
 
 .user-button{
-  background-color: whitesmoke;
+  background-color:whitesmoke;
   border:none;
-  padding: 10px;
-  margin-top: -50px;
-  border-radius: 100px;
+  padding:10px;
+  margin-top:-50px;
+  border-radius:100px;
   font-size:20px;
   
 }
@@ -54,68 +61,68 @@ code {
 .logo{
   height:100px;
   width:100px;
-  border-radius: 100px;
+  border-radius:100px;
   margin-top:-10px;
   
 }
 
 .content{
-    position: relative;
-    width: 100vw;
-    height: 80vh;
-    display: flex;
+  
+    display:flex;
+    grid-row:2/3;
+
 }
 
-/*----------Homepage---------- */
+/*---------- Homepage ---------- */
 
 .hero::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: url(./components/images/hero_img.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
-  filter: brightness(45%);
-  margin-top: 0;
+  content:"";
+  position:absolute;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  background:url(./components/images/hero_img.jpg);
+  background-repeat:no-repeat;
+  background-size:cover;
+  background-position:center center;
+  filter:brightness(45%);
+  margin-top:0;
 }
 
 .hero-content {
-    position: relative; 
-    font-family: "Monserrat", sans-serif;
-    color: white;
-    text-align: center;
+    position:relative; 
+    font-family:"Monserrat", sans-serif;
+    color:white;
+    text-align:center;
     height:50%;
     width:40%;
     padding-top:200px;
-    padding-left: 5%;
+    padding-left:5%;
     
 }
 .hero-title {
-    font-size: 6rem;
-    font-weight: 600;
-    margin-bottom: 0;
+    font-size:6rem;
+    font-weight:600;
+    margin-bottom:0;
 }
 .hero-text {
-    font-size: 1.5rem;
-    font-weight: 200;
-    margin-top: 1rem;
+    font-size:1.5rem;
+    font-weight:200;
+    margin-top:1rem;
 }
 
 
-/* ----------FOOTER---------- */
+/* ---------- FOOTER ---------- */
 
 .footer{
+  height:24px; 
   display:flex;
   justify-content: space-between;
-  margin:10px 50px 10px 50px;
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 2.5rem; 
+  grid-row: 3/4;
+  padding:0px 1em 0px 1em;
+
+
 }
 
 .footer-links a{
@@ -131,7 +138,7 @@ code {
   font-size:20px;
 }
 
-/* ----------About---------- */
+/* ---------- About ---------- */
 
 .about {
   display:flex;
@@ -145,9 +152,10 @@ code {
 }
 
 .about p {
-  padding:0px 500px 0px 500px;
+  padding:0px 7em 0px 7em;
+
 }
-/* ----------Terms---------- */
+/* ---------- Terms ---------- */
 
 .terms {
   display:flex;
@@ -161,5 +169,5 @@ code {
 }
 
 .terms p {
-  padding:0px 500px 0px 500px;
+  padding:0px 7em 0px 7em;
 }
